refactor(auth-member): 회원 인증 식별자 Long 전환